correct letter spacing for main title

--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
   font-size: 22px;
   font-weight: bold;
 
-  letter-spacing: 0px;
+  letter-spacing: -0.2px;
   line-height: 1.2;
 }
 
